--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,41 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link rel="preload" href="../src/img/gallery/photo1.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo2.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo3.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo4.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo5.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo6.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo7.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo8.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo9.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo10.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo11.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo12.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo13.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo14.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo15.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo16.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo17.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo18.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo19.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo20.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo21.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo22.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo23.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo24.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo25.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo26.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo27.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo28.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo29.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo30.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo31.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo32.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo33.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo34.jpg" as="image">
+    <link rel="preload" href="../src/img/gallery/photo35.jpg" as="image">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
